--- a/index.html
+++ b/index.html
@@ -14,7 +14,57 @@
 </head>
 
 <body>
-	<h1>Howdy FED2526</h1>
+	<header>
+		<nav>
+			<ul>
+				<li>
+					<img src="images/youtoozlogo.png"/> 
+					<button >
+						z
+					</button>
+					<button>
+						=
+					</button>
+				</li>
+			</ul>
+			</nav>
+
+		</header>
+		<main>
+			<section class="timeline">
+                <p id="countdown"></p>
+				<button>
+					black friday 
+				</button>
+
+
+			</section>
+
+			
+		<section>
+			<ul>
+				<li>
+              <article class="strangerthings"> 
+                <h3>Stranger Things</h3>
+                <img src="images/strangertings.png"/>
+            </article>
+
+            <article class="aradir">
+                <h3>Aradir</h3>
+                <img src="images/aradir.png"/>
+            </article>
+
+            <article class="peak">
+                <h3>Peak</h3>
+                <img src="images/peak.webp"/> 
+            </article>
+				</li>
+			</ul>
+		</section>
+<art			
+		</main> 
+	
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
