--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li>
-					<img src="images/youtoozlogo.png"/> 
-					<button >
-						z
-					</button>
-					<button>
-						=
-					</button>
-				</li>
+				<li><img src="images/youtoozlogo.png"/> </li>
+				<li><button>z</button></li>
+				<li><button>=</button></li>
 			</ul>
 			</nav>
 
@@ -33,6 +27,7 @@
 		<main>
 			<section class="timeline">
                 <p id="countdown"></p>
+				<h1 hidden> youtooz begin pagina</h1>
 				<button>
 					black friday 
 				</button>
@@ -40,31 +35,138 @@
 
 			</section>
 
+            <h2 hidden> populaire nieuwe items</h2>
 			
 		<section>
 			<ul>
-				<li>
-              <article class="strangerthings"> 
+			<li class="strangerthings"> 
                 <h3>Stranger Things</h3>
                 <img src="images/strangertings.png"/>
-            </article>
+				<button> buy -> </button>
+            </li>
 
-            <article class="aradir">
+            <li class="aradir">
                 <h3>Aradir</h3>
                 <img src="images/aradir.png"/>
-            </article>
+				<button> buy -> </button>
+			</li>
 
-            <article class="peak">
+            <li class="peak">
                 <h3>Peak</h3>
                 <img src="images/peak.webp"/> 
-            </article>
+				<button> buy -> </button>
+            
 				</li>
 			</ul>
 		</section>
-<art			
+		<div class="carrousel">
+          <ul>
+        <li><img src="images/apex.png" alt=""/></li>
+        <li><img src="images/callofduty.png" alt=""/></li>
+        <li><img src="images/hazbinhotel.png" alt=""/></li>
+        <li><img src="images/minecraft.png" alt=""/></li>
+        <li><img src="images/playstation.png" alt=""/></li>
+        <li><img src="images/skylanders.png" alt=""/></li>
+        <li><img src="images/worldofclash.png" alt=""/></li>
+         </ul>
+     </div>
+
+		<h2> Live now! </h2>
+
+		<section class="livenow">
+			<ul>
+				<li class="otsukaray"> 
+					<img src="images/otsukarayplush.webp" alt="otsukaray plush">
+					<P>Gone in 25d </P>
+					<p> plush </p>
+					<h3> otsuka ray plush (9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+				<li class="wiggly"> 
+					<img src="images/wigglyplush.webp" alt="otsukaray plush">
+					<P> Gone in 25d </P>
+					<p> plush </p>
+					<h3> otsuka ray plush (9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+			</ul>
+		</section>
+
+
+		<section class="blackfridaydeal">
+			<h2 hidden > Black friday deal</h2>
+			<img src="images/blackfridaydeal.png" alt="spend $75 or more get $19 off spend $185 or more get $55 off spend $325 or more get $110 off">
+		</section>
+
+		<section class="community">
+			<h2> Community designs</h2>
+			<p> Vote on design ideas for us to 
+				bring to life as Youtooz from artists in our 
+				community </p>
+			<Button> View All</Button>
+			<div class="communitycourrasel">
+				<ul>
+					<li><img src="images/tod.png" alt=""></li>
+					<li><img src="images/todd.png" alt=""></li>
+					<li><img src="images/spooky.png" alt=""></li>
+					<li><img src="images/icecream.png" alt=""></li>
+					<li><img src="images/icey.png" alt=""></li>
+					<li><img src="images/daily.png" alt=""></li>
+				</ul>
+			</div>
+			</section>
+			<h2>Upcoming drops</h2>
+			<section>
+				<ul>
+				<li class="otsukaray"> 
+					<img src="images/wigglyplush.webp" alt="otsukaray plush">
+					<P> Gone in 25d </P>
+					<p> plush </p>
+					<h3>Towellie Plush(9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+				<li class="otsukaray"> 
+					<img src="images/wigglyplush.webp" alt="otsukaray plush">
+					<P> Gone in 25d </P>
+					<p> plush </p>
+					<h3>Towellie Plush(9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+				</ul>
+		    </section>
+			<h2>Past drops</h2>
+			<h3> Gone forever! </h3>
+			<section>
+				<ul>
+				<li class="otsukaray"> 
+					<img src="images/wigglyplush.webp" alt="otsukaray plush">
+					<P> Gone in 25d </P>
+					<p> plush </p>
+					<h3>Towellie Plush(9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+				<li class="otsukaray"> 
+					<img src="images/wigglyplush.webp" alt="otsukaray plush">
+					<P> Gone in 25d </P>
+					<p> plush </p>
+					<h3>Towellie Plush(9in)</h3>
+					<p>$29.99 USD</p>
+				</li>
+				</ul>
+		    </section>
+			<section>
+			<h2>youtooz on the internet</h2>
+			</section>
+
 		</main> 
 	
-
+<footer>
+<ul>
+	<li>
+		
+	</li>
+</ul>
+</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
