--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
             <button >▼</button>
             </div>
         </div>
-        <button> add to cart</button>
+       <button id="addToCart">add to cart</button>
     </section>
        
 <section class="preorder">
@@ -101,7 +101,26 @@
    </section>
 </main>
     <footer>
-Please check out our shipping rates and shipping times on our shipping policy page.
-    </footer>
+    <section class="contact-form">
+        <h2>Neem Contact Met Ons Op</h2>    
+    <form action="/submit-form" method="post">        
+     <div>           
+         <label for="name">Naam:</label> 
+         <input type="text" id="name" name="name" required> 
+     </div>       
+     <div>            
+        <label for="email">E-mail:</label>            
+        <input type="email" id="email" name="email" required>  
+     </div>        
+     <div>            
+        <label for="message">Bericht:</label>           
+        <textarea id="message" name="message" required></textarea>
+     </div>        
+        <button type="submit">Verstuur</button>    
+    </form>
+</section>
+  <p>Please check out our shipping rates and shipping times on our shipping policy page.</p>
+  
+</footer>
 </body>
 <script defer src="scripts/script.js"></script>
