--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>shoppen</title>
 
 	<link href="styles/style.css" rel="stylesheet">
 
@@ -14,13 +14,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head> 
-<body >
-    <header class="button">
-        <a href="index.html">
-  <button type="button">✕</button>
-</a>
 
-    </header>
+
+<header class="button">
+  <a href="index.html" class="close-button" aria-label="Terug naar home">✕</a>
+</header>
+
+
     <main class="shopmain">
 <div class="gallery-container">
     <!-- Thumbnails links -->
@@ -120,7 +120,9 @@
     </form>
 </section>
   <p>Please check out our shipping rates and shipping times on our shipping policy page.</p>
-  
+
 </footer>
+
+  <script defer src="scripts/script.js"></script>
 </body>
-<script defer src="scripts/script.js"></script>
+</html>
